# private_access

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/private_access/: private_access.hpp
test/: CMakeLists.txt  compile_test.cpp  link.hpp  link_a.cpp  link_b.cpp  usage.cpp
